apps/base/productivity/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &deploymentName nextcloud-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *deploymentName
  template:
    metadata:
      labels:
        app: *deploymentName
    spec:
      containers:
        - image: nextcloud:latest@sha256:b1ae671e9815401b0e837b19b9c778e89887721d67f0c8f9d34aa1d27a9a208f
          imagePullPolicy: IfNotPresent
          name: nextcloud
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html
              name: config-data
              subPath: nextcloud/config
            - mountPath: /var/www/html/data/nfs-share
              name: nfs-data-volume
      hostname: nextcloud
      # Volumes need to be defined in the patch file of flux deployment
      # volumes:
      #   - name: nfs-data-volume
      #     nfs:
      #       server: ${NFS_STORAGE_HOST_FAST}
      #       path: /mnt/mopower/swarm-data
      #   - name: config-data
      #     nfs:
      #       server: ${NFS_STORAGE_HOST_FAST}
      #       path: ${NFS_STORAGE_CONFIG_DATA_PATH}
