apps/base/productivity/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
spec:
  selector:
    app: nextcloud-deployment
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
