apps/base/productivity/nextcloud/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextcloud.internal.${SECRET_DOMAIN}`) || Host(`nextcloud.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: nextcloud-service
          port: 80
  tls:
    certResolver: letsencrypt
